estilizando big card

--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -8,12 +8,21 @@
   justify-content: flex-start;
 }
 
-.big-card__title h1 {
+.big-card__title h1 a{
   margin-top: 15px;
   font-size: 20px;
 }
 
-.big-card__description p {
+.big-card__description {
+  margin-top: 20px;
+}
+
+.big-card__description p a{
   margin-top: 10px;
   color: gray;
+}
+
+.big-card__photo img {
+  width: 100%;
+  min-width: 400px;
 }
