--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -3,9 +3,9 @@
     <img src="https://tse4.mm.bing.net/th?id=OIP.F00dCf4bXxX0J-qEEf4qIQHaD6&pid=Api&P=0&h=180" alt="" height="200">
   </div>
   <div class="big-card__title">
-    <h1>Saiu a nova versão do angular</h1>
+    <h1><a href="#">Saiu a nova versão do angular</a></h1>
   </div>
   <div class="big-card__description">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero omnis eius voluptatibus, molestias ipsam, atque libero obcaecati tenetur doloremque repellat iste doloribus corporis modi debitis quia nisi? Culpa, accusamus laudantium.</p>
+    <p><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero omnis eius voluptatibus, molestias ipsam, atque libero obcaecati tenetur doloremque repellat iste doloribus corporis modi debitis quia nisi? Culpa, accusamus laudantium.</a></p>
   </div>
 </div>
