--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,15 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+  <div class="container__small-card-content">
+    <div class="small-card__photo">
+      <img src="https://tse1.mm.bing.net/th?id=OIP.-jwubw23t4XMn315eOb4_QHaDt&pid=Api&P=0&h=180" alt="" height="200">
+    </div>
+    <div class="small-card__title">
+      <h1><a href="#">Saiu a nova versão do angular</a></h1>
+    </div>
+   </div>
+  </div>
+
+  <div class="container__small-card-separator">
+    <hr>
+  </div>
+
