--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li><a href="https://www.linkedin.com/in/victor-matheus507/" target="_blank">Linkedin</a></li>
+    <li><a href="https://github.com/V-Matheus" target="_blank">Github</a></li>
+    <li><a href="#" target="_blank">Youtube</a></li>
+  </ul>
+</div>
