--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,12 +7,17 @@
 <div class="container__articles">
 
   <div class="articles__main">
-   <app-big-card></app-big-card>
+   <app-big-card
+   photoCover="https://tse4.mm.bing.net/th?id=OIP.u3mgmYMq4ofTd4lBtZtbxQHaD4&pid=Api&P=0&h=180"
+   cardTitle="Novas novidades do Angular"
+   cardDescription="Foi divulgado novas versões do angular, teste agora!!"
+   >
+  </app-big-card>
   </div>
 
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card photoCover="https://tse1.mm.bing.net/th?id=OIP.-jwubw23t4XMn315eOb4_QHaDt&pid=Api&P=0&h=180" carTitle="Saiu a nova versão do angular"></app-small-card>
+    <app-small-card photoCover="https://tse3.mm.bing.net/th?id=OIP.FgKc97lR6dBVfpUl-6KjhgHaDt&pid=Api&P=0&h=180" carTitle="React vs Angular, qual é o melhor ? "></app-small-card>
+    <app-small-card photoCover="https://tse1.mm.bing.net/th?id=OIP.QYBUxDZbPTLmmbebZnmUdgHaEK&pid=Api&P=0&h=180" carTitle="Crie animações com o angular"></app-small-card>
   </div>
 </div>
