--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,11 +1,11 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://tse4.mm.bing.net/th?id=OIP.u3mgmYMq4ofTd4lBtZtbxQHaD4&pid=Api&P=0&h=180" alt="" height="200">
+    <img src={{photoCover}} alt="" height="200">
   </div>
   <div class="big-card__title">
-    <h1><a href="#">Saiu a nova versão do angular</a></h1>
+    <h1><a href="#">{{cardTitle}}</a></h1>
   </div>
   <div class="big-card__description">
-    <p><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero omnis eius voluptatibus, molestias ipsam, atque libero obcaecati tenetur doloremque repellat iste doloribus corporis modi debitis quia nisi? Culpa, accusamus laudantium.</a></p>
+    <p><a href="">{{cardDescription}}</a></p>
   </div>
 </div>
