--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -4,7 +4,7 @@
       <img src='{{photoCover}}'alt="" height="200">
     </div>
     <div class="small-card__title">
-      <h1><a href="#">{{carTitle}}</a></h1>
+      <h1><a [routerLink]="['content', id]">{{carTitle}}</a></h1>
     </div>
    </div>
   </div>
